--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,8 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
-
+    app:startDestination="@id/splashFragment">
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.chessporg.githubuser.ui.splash.SplashFragment"
+        android:label="SplashFragment" />
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.chessporg.githubuser.ui.home.HomeFragment"
