--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,6 +29,7 @@
                 tools:ignore="ContentDescription" />
 
             <androidx.appcompat.widget.SearchView
+                android:id="@+id/sv_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end" />
