--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,11 +37,54 @@
         </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+            <include layout="@layout/shimmer_item_user" />
+
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_users"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
