--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -36,12 +36,21 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/iv_share"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="end|center_vertical"
+            android:src="@drawable/ic_baseline_share_24"
+            app:tint="@color/black"
+            tools:ignore="ContentDescription" />
     </LinearLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/civ_profil_picture"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginTop="16dp"
         app:civ_border_color="@color/white"
         app:civ_border_width="2dp"
@@ -64,11 +73,11 @@
         app:layout_constraintTop_toBottomOf="@id/civ_profil_picture" />
 
     <TextView
-        android:id="@+id/tv_real_name"
+        android:id="@+id/tv_user_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/real_name"
+        android:text="@string/user_id"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="italic"
@@ -87,111 +96,41 @@
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_real_name" />
+        app:layout_constraintTop_toBottomOf="@id/tv_user_id" />
 
-    <LinearLayout
-        android:id="@+id/ll_company"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_repository"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_follower_following"
-        tools:ignore="UseCompoundDrawables">
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="24dp"
-            android:src="@drawable/ic_baseline_other_houses_24"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/tv_company"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="24dp"
-            android:gravity="center_vertical"
-            android:text="@string/company"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_company_address"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_company"
-        tools:ignore="UseCompoundDrawables">
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="24dp"
-            android:src="@drawable/ic_baseline_location_on_24"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/tv_address"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="24dp"
-            android:gravity="center_vertical"
-            android:text="@string/location"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ll_company_address"
-        tools:ignore="UseCompoundDrawables">
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginVertical="8dp"
-            android:layout_marginStart="24dp"
-            android:src="@drawable/ic_baseline_folder_shared_24"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/tv_repository"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="24dp"
-            android:gravity="center_vertical"
-            android:text="@string/repository"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="normal" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btn_share"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/black"
-        android:text="@string/share"
-        android:textColor="@color/white"
+        android:layout_marginTop="8dp"
+        android:text="@string/repository_1s"
+        android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_follower_following" />
+    
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_repository"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabTextColor="@color/tab_text_color_unselected"
+            app:tabSelectedTextColor="@color/black" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
