add shimmer layout for detail user

--- a/app/src/main/res/layout/shimmer_detail_user.xml
+++ b/app/src/main/res/layout/shimmer_detail_user.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.detail.DetailFragment">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/ll_header"
@@ -32,7 +31,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="80dp"
-            android:text="@string/user_name"
+            android:background="@color/shimmer_placeholder"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -51,20 +50,17 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="16dp"
-        app:civ_border_color="@color/white"
-        app:civ_border_width="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll_header"
-        tools:src="@drawable/github_mark_black_120px" />
+        tools:src="@color/shimmer_placeholder" />
 
     <TextView
         android:id="@+id/tv_username"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="@string/username"
-        android:textColor="@color/black"
+        android:background="@color/shimmer_placeholder"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,11 +69,10 @@
 
     <TextView
         android:id="@+id/tv_user_id"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/user_id"
-        android:textColor="@color/black"
+        android:background="@color/shimmer_placeholder"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,11 +81,10 @@
 
     <TextView
         android:id="@+id/tv_follower_following"
-        android:layout_width="wrap_content"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/follower_1_s_following_2_s"
-        android:textColor="@color/black"
+        android:background="@color/shimmer_placeholder"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,52 +93,13 @@
 
     <TextView
         android:id="@+id/tv_repository"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="@string/repository_1s"
-        android:textColor="@color/black"
+        android:background="@color/shimmer_placeholder"
         android:textSize="18sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_follower_following" />
-
-    <include
-        android:id="@+id/shimmer_layout"
-        layout="@layout/shimmer_detail_user"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline">
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabSelectedTextColor="@color/black"
-            app:tabTextColor="@color/tab_text_color_unselected" />
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontal_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp"
-        app:layout_constraintGuide_percent="0.45" />
 </androidx.constraintlayout.widget.ConstraintLayout>
