--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -90,12 +90,14 @@
         android:id="@+id/tv_company_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginTop="8dp"
+        android:text="@string/company_location"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:text="@string/company_location"
-        app:layout_constraintStart_toStartOf="@id/tv_user_id"
         app:layout_constraintEnd_toEndOf="@id/tv_user_id"
+        app:layout_constraintStart_toStartOf="@id/tv_user_id"
         app:layout_constraintTop_toBottomOf="@id/tv_user_id" />
 
     <TextView
@@ -125,10 +127,10 @@
         tools:text="@string/repository_1s" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
-        android:visibility="gone"
         android:id="@+id/shimmer_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
