--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -26,13 +26,13 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="80dp"
-        android:text="@string/name"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/iv_back_button"
         app:layout_constraintStart_toEndOf="@id/iv_back_button"
-        app:layout_constraintTop_toTopOf="@id/iv_back_button" />
+        app:layout_constraintTop_toTopOf="@id/iv_back_button"
+        tools:text="@string/name" />
 
     <ImageView
         android:id="@+id/iv_share"
@@ -92,13 +92,13 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/company_location"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@id/tv_user_id"
         app:layout_constraintStart_toStartOf="@id/tv_user_id"
-        app:layout_constraintTop_toBottomOf="@id/tv_user_id" />
+        app:layout_constraintTop_toBottomOf="@id/tv_user_id"
+        tools:text="@string/company_location" />
 
     <TextView
         android:id="@+id/tv_follower_following"
