--- a/app/src/main/res/layout/fragment_favorite_user.xml
+++ b/app/src/main/res/layout/fragment_favorite_user.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.favorite.FavoriteUserFragment">
 
     <TextView
         android:id="@+id/tv_title"
@@ -38,54 +39,11 @@
             tools:ignore="ContentDescription" />
     </androidx.cardview.widget.CardView>
 
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/shimmer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-            <include layout="@layout/shimmer_item_user" />
-
-        </LinearLayout>
-    </com.facebook.shimmer.ShimmerFrameLayout>
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_users"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
